--- a/yamls/piwik.yml
+++ b/yamls/piwik.yml
@@ -8,6 +8,7 @@
 # CVE-2012-4541
 # CVE-2012-XXXX 1.7     http://piwik.org/blog/2012/02/7775/
 # CVE-2013-0193
+# CVE-2013-0194
 # CVE-2013-0195
 # CVE-2013-1844 1.11    http://piwik.org/blog/2013/03/piwik-1-11/
 # CVE-2013-2633 1.11    http://piwik.org/blog/2013/03/piwik-1-11/
