--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -126,14 +126,15 @@
 # CVE-2015-8769 3.4.7   https://www.joomla.org/announcements/release-news/5643-joomla-3-4-7.html https://developer.joomla.org/security-centre/639-20151206-core-session-hardening.html https://developer.joomla.org/security-centre/640-20151207-core-sql-injection.html
 # CVE-2016-8869 3.6.4   https://www.joomla.org/announcements/release-news/5678-joomla-3-6-4-released.html
 # CVE-2016-8870 3.6.4   https://www.joomla.org/announcements/release-news/5678-joomla-3-6-4-released.html
-# CVE-2016-9836 3.6.5   https://developer.joomla.org/security-centre/665-20161202-core-shell-upload.html
+# CVE-2016-9836 3.6.5   https://developer.joomla.org/security-centre/665-20161202-core-shell-upload.html https://www.joomla.org/announcements/release-news/5693-joomla-3-6-5-released.html
+# CVE-2016-9837 3.6.5   https://www.joomla.org/announcements/release-news/5693-joomla-3-6-5-released.html
 # CVE-2016-9838 3.6.5   https://developer.joomla.org/security-centre/664-20161201-core-elevated-privileges.html
 Joomla 3:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
     secure_version: '3.6.5'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9836 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9838 https://developer.joomla.org/security-centre/665-20161202-core-shell-upload.html https://developer.joomla.org/security-centre/664-20161201-core-elevated-privileges.html'
+    cve: 'https://www.joomla.org/announcements/release-news/5693-joomla-3-6-5-released.html https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9836 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9837 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9838'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 2.5:
