--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -17,11 +17,15 @@
 # CVE-2015-2034 2.7.4
 # CVE-2015-2035 2.7.4
 # TODO          2.8.3 http://piwigo.org/releases/2.8.3
+# CVE-2016-9751 TODO
+# CVE-2016-10083 2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573
+# CVE-2016-10084 2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573
+# CVE-2016-10085 2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573
 Piwigo:
   1:
     location: ['/include/constants.php']
-    secure_version: '2.8.3'
+    secure_version: '2.8.5'
     regexp: ['define.*?PHPWG_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://piwigo.org/releases/2.8.3'
+    cve: 'http://piwigo.org/releases/2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
