--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1047,12 +1047,13 @@ WordPress plugin code-snippets:
     post_processing: ['php5.fcgi']
 # CVE-2015-2069 2.2.11 http://seclists.org/fulldisclosure/2015/Feb/75
 # OVE-20160720-0006 2.6.3 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_woocommerce_using_image_metadata__exif_.html
+# OVE-20160719-0002 2.6.4 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_woocommerce_wordpress_plugin.html
 WordPress plugin woocommerce:
   1:
     location: ['/wp-content/plugins/woocommerce/readme.txt']
-    secure_version: '2.6.4'
+    secure_version: '2.6.9'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160719-0002 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_woocommerce_wordpress_plugin.html'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-10112'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin icegram:
