--- a/yamls/zikula.yml
+++ b/yamls/zikula.yml
@@ -4,9 +4,9 @@
 # CVE-2016-9835 1.4.4/1.3.11 https://github.com/zikula/core/issues/3237 http://www.securityfocus.com/bid/95005
 Zikula:
   1:
-    location: ['/lib/Zikula/Core.php']
+    location: ['/lib/Zikula/Core.php', '/lib/legacy/Zikula/Core.php']
     secure_version: '1.4.4'
     regexp: ['.*?const.*?VERSION_NUM.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-6168 https://www.htbridge.com/advisory/HTB23178'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9835'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
