--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -167,18 +167,25 @@
 # CVE-2016-6897 4.6     https://wordpress.org/news/2016/08/pepper/ https://sumofpwn.nl/advisory/2016/path_traversal_vulnerability_in_wordpress_core_ajax_handlers.html
 # CVE-2016-7168 4.6.1   https://wordpress.org/news/2016/09/wordpress-4-6-1-security-and-maintenance-release/
 # CVE-2016-7169 4.6.1   https://wordpress.org/news/2016/09/wordpress-4-6-1-security-and-maintenance-release/
+# CVE-2017-5487 4.7.1   https://wordpress.org/news/2017/01/wordpress-4-7-1-security-and-maintenance-release/
+# CVE-2017-5488 4.7.1
+# CVE-2017-5489 4.7.1
+# CVE-2017-5490 4.7.1
+# CVE-2017-5491 4.7.1
+# CVE-2017-5492 4.7.1
+# CVE-2017-5493 4.7.1
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '4.6.1'
+    secure_version: '4.7.1'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2016/09/wordpress-4-6-1-security-and-maintenance-release/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7168 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7169'
+    cve: 'https://wordpress.org/news/2017/01/wordpress-4-7-1-security-and-maintenance-release/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5488 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5489 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5490 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5491 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5492 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5493'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '4.6.1'
+    secure_version: '4.7.1'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2016/09/wordpress-4-6-1-security-and-maintenance-release/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7168 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7169'
+    cve: 'https://wordpress.org/news/2017/01/wordpress-4-7-1-security-and-maintenance-release/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5488 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5489 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5490 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5491 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5492 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5493'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
