--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -175,18 +175,19 @@
 # CVE-2017-5491 4.7.1
 # CVE-2017-5492 4.7.1
 # CVE-2017-5493 4.7.1
+# CVE-2017-XXXX 4.7.2   https://wordpress.org/news/2017/01/wordpress-4-7-2-security-release/
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '4.7.1'
+    secure_version: '4.7.2'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2017/01/wordpress-4-7-1-security-and-maintenance-release/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5488 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5489 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5490 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5491 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5492 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5493'
+    cve: 'https://wordpress.org/news/2017/01/wordpress-4-7-2-security-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '4.7.1'
+    secure_version: '4.7.2'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2017/01/wordpress-4-7-1-security-and-maintenance-release/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5488 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5489 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5490 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5491 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5492 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5493'
+    cve: 'https://wordpress.org/news/2017/01/wordpress-4-7-2-security-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
