--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -18,15 +18,17 @@
 # CVE-2015-2035 2.7.4
 # TODO          2.8.2 http://piwigo.org/releases/2.8.2 http://piwigo.org/forum/viewtopic.php?id=26730
 # TODO          2.8.3 http://piwigo.org/releases/2.8.3
-# CVE-2016-9751 TODO
+# CVE-2016-9751 TODO asked status from upstream via email 2016-01-02 (never replied)
 # CVE-2016-10083 2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573
 # CVE-2016-10084 2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573
 # CVE-2016-10085 2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573
+# CVE-2016-10105 TODO https://github.com/Piwigo/Piwigo/issues/574
+# CVE-2017-5608 2.8.6
 Piwigo:
   1:
     location: ['/include/constants.php']
-    secure_version: '2.8.5'
+    secure_version: '2.8.6'
     regexp: ['define.*?PHPWG_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://piwigo.org/releases/2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573'
+    cve: 'http://piwigo.org/releases/2.8.6 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5608'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
