--- a/yamls/tikiwiki.yml
+++ b/yamls/tikiwiki.yml
@@ -12,11 +12,12 @@
 # CVE-2012-3996 8.4
 # CVE-2012-0911 8.4
 # CVE-2016-9889 16.1/15.3/12.10 https://tiki.org/article443-Security-update-Tiki-16-1-Tiki-15-3-and-Tiki-12-10-released
+# CVE-2016-10143 16.2/15.4/12.11 https://tiki.org/article445-Security-updates-Tiki-16-2-15-4-and-Tiki-12-11-released http://seclists.org/bugtraq/2017/Mar/41
 TikiWiki:
   1:
     location: ['/lib/setup/twversion.class.php']
-    secure_version: '16.1'
+    secure_version: '16.2'
     regexp: ['.*?\$this->version.*?(?P<version>[0-9.]{1,})']
-    cve: 'https://tiki.org/article443-Security-update-Tiki-16-1-Tiki-15-3-and-Tiki-12-10-released https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9889'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-10143 https://tiki.org/article445-Security-updates-Tiki-16-2-15-4-and-Tiki-12-11-released'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
