--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -63,12 +63,15 @@
 # https://drupal.org/SA-CORE-2016-005   CVE-2016-9450   8.2.3/7.52
 # https://drupal.org/SA-CORE-2016-005   CVE-2016-9451   8.2.3/7.52
 # https://drupal.org/SA-CORE-2016-005   CVE-2016-9452   8.2.3/7.52
+# https://drupal.org/SA-2017-001        CVE-2017-6377   8.2.7
+# https://drupal.org/SA-2017-001        CVE-2017-6379   8.2.7
+# https://drupal.org/SA-2017-001        CVE-2017-6381   8.2.7
 Drupal 8:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.2.3'
+    secure_version: '8.2.7'
     regexp: ["  const VERSION = '(?P<version>[0-9.]+)"]
-    cve: 'https://drupal.org/SA-CORE-2016-005 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9449 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9450 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9451 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9452'
+    cve: 'https://drupal.org/SA-2017-001 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6377 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6379 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6381'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
