--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2111,7 +2111,7 @@ WordPress plugin dtracker:
     location: ['/wp-content/plugins/dtracker/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-1002004 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-1002005 http://www.vapidlabs.com/advisory.php?v=183'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-1002004 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-1002005 http://www.vapidlabs.com/advisory.php?v=183 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-1002006 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-1002007 http://www.vapidlabs.com/advisory.php?v=186'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-markdown-editor:
