--- a/yamls/bigtree.yml
+++ b/yamls/bigtree.yml
@@ -1,4 +1,5 @@
 # URL: https://www.bigtreecms.org/ https://github.com/bigtreecms/BigTree-CMS/
+# NFU: http://www.openwall.com/lists/oss-security/2016/11/24/5 Form Builder extension
 # CVE-2013-4879 ? HTB23165
 # CVE-2013-4880 ? HTB23165
 # CVE-2013-4881 ? HTB23165
@@ -8,11 +9,20 @@
 # CVE-2015-XXXX 4.2.4 http://blog.curesec.com/article/blog/BigTree-CMS-423-Multiple-SQL-Injection-Vulnerabilities-39.html
 # CVE-2016-XXXX 4.2.9 https://blog.curesec.com/article/blog/BigTree-428-Object-Injection-amp-Improper-Filename-Sanitation-152.html
 # TODO: pending 4.2.12/4.1.16 https://github.com/bigtreecms/BigTree-CMS/pull/256 http://www.openwall.com/lists/oss-security/2016/11/11/13
+# TODO: no fix, pending CVE request http://www.openwall.com/lists/oss-security/2016/11/24/4
+# TODO: http://www.openwall.com/lists/oss-security/2016/12/07/1 https://github.com/bigtreecms/BigTree-CMS/issues/264 https://github.com/bigtreecms/BigTree-CMS/commit/59ebef5978f80e2fdc7b4db4a28b668c5a39fbc3
+# TODO: http://www.openwall.com/lists/oss-security/2016/12/07/2
+# CVE-2016-10223 4.2.15
+# CVE-2017-6914 4.2.17 https://github.com/bigtreecms/BigTree-CMS/issues/275
+# CVE-2017-6915 4.2.17
+# CVE-2017-6916 TODO 4.2.18 is vulnerable (not published)
+# CVE-2017-6917 4.2.17
+# CVE-2017-6918 4.2.17
 BigTree CMS:
   1:
     location: ['/core/version.php']
-    secure_version: '4.2.12'
+    secure_version: '4.2.17'
     regexp: ['.*?define.*?BIGTREE_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://github.com/bigtreecms/BigTree-CMS/pull/256'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6914 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6915 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6917 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-6918'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
