--- a/yamls/cubecart.yml
+++ b/yamls/cubecart.yml
@@ -7,11 +7,13 @@
 # CVE-2015-XXXX 6.0.8 http://seclists.org/fulldisclosure/2015/Nov/24
 # CVE-2015-XXXX 6.0.8 http://seclists.org/fulldisclosure/2015/Nov/25
 # CVE-2016-XXXX 6.0.11 https://www.htbridge.com/advisory/HTB23298 https://forums.cubecart.com/topic/51079-cubecart-6011-released/
+# CVE-2017-2090 6.1.4
+# CVE-2017-2098 6.1.4
 CubeCart:
   1:
     location: ['/ini.inc.php']
-    secure_version: '6.0.11'
+    secure_version: '6.1.4'
     regexp: ['define.*?CC_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://www.htbridge.com/advisory/HTB23298 https://forums.cubecart.com/topic/51079-cubecart-6011-released/'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-2090 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-2098'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
