--- a/yamls/cubecart.yml
+++ b/yamls/cubecart.yml
@@ -9,11 +9,12 @@
 # CVE-2016-XXXX 6.0.11 https://www.htbridge.com/advisory/HTB23298 https://forums.cubecart.com/topic/51079-cubecart-6011-released/
 # CVE-2017-2090 6.1.4
 # CVE-2017-2098 6.1.4
+# CVE-2017-2117 6.1.5
 CubeCart:
   1:
     location: ['/ini.inc.php']
-    secure_version: '6.1.4'
+    secure_version: '6.1.5'
     regexp: ['define.*?CC_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-2090 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-2098'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-2117'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
