MediaWiki fixes security vulnerabilities

--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -113,26 +113,27 @@
 # CVE-2017-0370 1.28.1/1.27.2/1.23.16 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000207.html
 # CVE-2017-0372 1.28.1/1.27.2/1.23.16 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000207.html
 # N/A           1.23.17 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000208.html
+# CVE-2017-XXXX 1.28.2/1.27.3 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000209.html
 MediaWiki 1.28:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.28.1'
+    secure_version: '1.28.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.28\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000207.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000209.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.27:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.2'
+    secure_version: '1.27.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.27\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000207.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000209.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.26:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.2'
+    secure_version: '1.27.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.26\.[0-9.]{1,})']
     cve: 'MediaWiki 1.26 is end of life.'
     fingerprint: detect_general
@@ -140,7 +141,7 @@ MediaWiki 1.26:
 MediaWiki 1.25:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.2'
+    secure_version: '1.27.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.25\.[0-9.]{1,})']
     cve: 'MediaWiki 1.25 is end of life.'
     fingerprint: detect_general
@@ -148,7 +149,7 @@ MediaWiki 1.25:
 MediaWiki 1.24:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.2'
+    secure_version: '1.27.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.24\.[0-9.]{1,})']
     cve: 'MediaWiki 1.24 is end of life.'
     fingerprint: detect_general
@@ -164,7 +165,7 @@ MediaWiki 1.23:
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.2'
+    secure_version: '1.27.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
     cve: 'MediaWiki 1.22 is end of life.'
     fingerprint: detect_general
@@ -172,7 +173,7 @@ MediaWiki 1.22:
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.2'
+    secure_version: '1.27.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
     cve: 'MediaWiki 1.21 is end of life.'
     fingerprint: detect_general
@@ -180,7 +181,7 @@ MediaWiki 1.21:
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.2'
+    secure_version: '1.27.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
     cve: 'MediaWiki 1.20.x is end of life.'
     fingerprint: detect_general
@@ -188,7 +189,7 @@ MediaWiki 1.20:
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.2'
+    secure_version: '1.27.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
     cve: 'MediaWiki 1.19.x is end of life.'
     fingerprint: detect_general
@@ -196,7 +197,7 @@ MediaWiki 1.19:
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.2'
+    secure_version: '1.27.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18.x is end of life.'
     fingerprint: detect_general
