--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -1,4 +1,5 @@
 # URL: http://developer.joomla.org/development-status.html https://docs.joomla.org/Joomla!_CMS_versions https://docs.joomla.org/What_version_of_Joomla!_should_you_use?
+# NFU: CVE-2017-8057
 # CVE-2006-0303 1.0.7   SA18513
 # CVE-2006-1047 1.0.8   SA19105
 # CVE-2006-1048 1.0.8   SA19105
@@ -130,51 +131,58 @@
 # CVE-2016-9836 3.6.5   https://developer.joomla.org/security-centre/665-20161202-core-shell-upload.html https://www.joomla.org/announcements/release-news/5693-joomla-3-6-5-released.html
 # CVE-2016-9837 3.6.5   https://www.joomla.org/announcements/release-news/5693-joomla-3-6-5-released.html
 # CVE-2016-9838 3.6.5   https://developer.joomla.org/security-centre/664-20161201-core-elevated-privileges.html
+# CVE-2017-7983 3.7.0   https://developer.joomla.org/security-centre/683-20170401-core-information-disclosure
+# CVE-2017-7984 3.7.0   https://developer.joomla.org/security-centre/684-20170402-core-xss-vulnerability
+# CVE-2017-7985 3.7.0   https://developer.joomla.org/security-centre/685-20170403-core-xss-vulnerability
+# CVE-2017-7986 3.7.0   https://developer.joomla.org/security-centre/686-20170404-core-xss-vulnerability
+# CVE-2017-7987 3.7.0   https://developer.joomla.org/security-centre/687-20170405-core-xss-vulnerability
+# CVE-2017-7988 3.7.0   https://developer.joomla.org/security-centre/688-20170406-core-acl-violations
+# CVE-2017-7989 3.7.0   https://developer.joomla.org/security-centre/689-20170407-core-acl-violations
 Joomla 3:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.6.5'
+    secure_version: '3.7.0'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
-    cve: 'https://www.joomla.org/announcements/release-news/5693-joomla-3-6-5-released.html https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9836 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9837 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9838'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-7983 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-7984 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-7985 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-7986 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-7987 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-7988 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-7989'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 2.5:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.6.5'
+    secure_version: '3.7.0'
     regexp: ['[\t]<version>(?P<version>2\.5\.[0-9]{1,})']
-    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.6.5 version.'
+    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.7.0 version.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 1.7:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.6.5'
+    secure_version: '3.7.0'
     regexp: ['[\t]+public[\t|\s]\$RELEASE.*?(?P<version>1.7)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.6.5 version.'
+    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.7.0 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.6:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.6.5'
+    secure_version: '3.7.0'
     regexp: ['.*?RELEASE.*?(?P<version>1.6)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.6.5 version.'
+    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.7.0 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.5:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.6.5'
+    secure_version: '3.7.0'
     regexp: ['.*?RELEASE.*?(?P<version>1.5)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.6.5 version.'
+    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.7.0 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.0:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.6.5'
+    secure_version: '3.7.0'
     regexp: ['[\t]+var.*?RELEASE.*?(?P<version>1.0)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.6.5 version.'
+    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.7.0 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
