--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2138,12 +2138,12 @@ WordPress plugin membership-simplified-for-oap-members-only:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-1002009 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-1002010 http://www.vapidlabs.com/advisory.php?v=188'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
-WordPress plugin spider-event-calendar:  # CVE requested 2017-04-12 #318821
+WordPress plugin spider-event-calendar:
   1:
     location: ['/wp-content/plugins/spider-event-calendar/readme.txt']
     secure_version: '1.5.52'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://lists.openwall.net/full-disclosure/2017/04/09/1'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-7719 http://lists.openwall.net/full-disclosure/2017/04/09/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wordpress-firewall-2:
