--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -56,12 +56,13 @@
 # CVE-2016-9420 1.8.8
 # CVE-2016-9421 1.8.8
 # CVE-2017-7566
+# CVE-2017-8103 1.8.11
 # CVE-2017-8104 1.8.11  https://blog.mybb.com/2017/04/04/mybb-1-8-11-merge-system-1-8-11-release/
 MyBB:
   1:
     location: ['/inc/class_core.php']
     secure_version: '1.8.11'
     regexp: ['.*?public.*?\$version.*?(?P<version>[0-9.]+)']
-    cve: 'https://blog.mybb.com/2017/04/04/mybb-1-8-11-merge-system-1-8-11-release/ https://nvd.nist.gov/vuln/detail/CVE-2017-8104'
+    cve: 'https://blog.mybb.com/2017/04/04/mybb-1-8-11-merge-system-1-8-11-release/ https://nvd.nist.gov/vuln/detail/CVE-2017-8103 https://nvd.nist.gov/vuln/detail/CVE-2017-8104'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
