--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -119,7 +119,7 @@ MediaWiki 1.28:
     location: ['/includes/DefaultSettings.php']
     secure_version: '1.28.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.28\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000209.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000209.html https://nvd.nist.gov/vuln/detail/CVE-2017-0372'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.27:
@@ -127,7 +127,7 @@ MediaWiki 1.27:
     location: ['/includes/DefaultSettings.php']
     secure_version: '1.27.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.27\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000209.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000209.html https://nvd.nist.gov/vuln/detail/CVE-2017-0372'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.26:
