--- a/yamls/atutor.yml
+++ b/yamls/atutor.yml
@@ -7,14 +7,19 @@
 # CVE-2015-7711 http://karmainsecurity.com/KIS-2015-07 http://seclists.org/bugtraq/2015/Nov/25
 # CVE-2015-7712
 # CVE-2015-8471 http://seclists.org/bugtraq/2015/Dec/10 https://bitguard.wordpress.com/2015/12/05/atutor-2-2-sqli-vulnerability/
-# CVE-XXXX-XXXX 2.2.1 http://seclists.org/fulldisclosure/2016/Feb/17
-# CVE-XXXX-XXXX 2.2.2 http://www.openwall.com/lists/oss-security/2016/07/01/3 http://www.atutor.ca/atutor/mantis/view.php?id=5681
-# CVE-XXXX-XXXX 2.2.2 https://www.htbridge.com/advisory/HTB23297
+# TODO 2.2.1 http://seclists.org/fulldisclosure/2016/Feb/17
+# CVE-2016-2539
+# CVE-2016-2555
+# CVE-2016-10400 2.2.2 https://www.htbridge.com/advisory/HTB23297
+# CVE-2017-6483
+# CVE-2017-1000002 2.2.2 http://www.atutor.ca/atutor/mantis/view.php?id=5681
+# CVE-2017-1000003 2.2.2 http://www.atutor.ca/atutor/mantis/view.php?id=5681
+# CVE-2017-1000004 2.2.2 http://www.atutor.ca/atutor/mantis/view.php?id=5681
 ATutor:
   1:
     location: ['/include/lib/constants.inc.php']
     secure_version: '2.2.2'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://www.atutor.ca/atutor/mantis/changelog_page.php?version_id=55'
+    cve: 'http://www.atutor.ca/atutor/mantis/changelog_page.php?version_id=55 https://nvd.nist.gov/vuln/detail/CVE-2017-1000002 https://nvd.nist.gov/vuln/detail/CVE-2017-1000003 https://nvd.nist.gov/vuln/detail/CVE-2017-1000004'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
