--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -142,51 +142,53 @@
 # CVE-2017-9933 3.7.3   https://developer.joomla.org/security-centre/696-20170601-core-information-disclosure.html
 # CVE-2017-9934 3.7.3   https://developer.joomla.org/security-centre/697-20170602-core-xss-vulnerability.html
 # CVE-2017-7985 3.7.3   https://developer.joomla.org/security-centre/698-20170603-core-xss-vulnerability.html
+# CVE-2017-11364 3.7.4  https://developer.joomla.org/security-centre/700-20170704-core-installer-lack-of-ownership-verification.html
+# CVE-2017-11612 3.7.4  https://developer.joomla.org/security-centre/701-20170605-core-xss-vulnerability.html
 Joomla 3:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.7.3'
+    secure_version: '3.7.4'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
-    cve: 'https://developer.joomla.org/security-centre/696-20170601-core-information-disclosure.html https://nvd.nist.gov/vuln/detail/CVE-2017-9933 https://developer.joomla.org/security-centre/697-20170602-core-xss-vulnerability.html https://nvd.nist.gov/vuln/detail/CVE-2017-9934 https://developer.joomla.org/security-centre/698-20170603-core-xss-vulnerability.html https://nvd.nist.gov/vuln/detail/CVE-2017-7985'
+    cve: 'https://developer.joomla.org/security-centre/700-20170704-core-installer-lack-of-ownership-verification.html https://nvd.nist.gov/vuln/detail/CVE-2017-11364 https://developer.joomla.org/security-centre/701-20170605-core-xss-vulnerability.html https://nvd.nist.gov/vuln/detail/CVE-2017-11612'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 2.5:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.7.3'
+    secure_version: '3.7.4'
     regexp: ['[\t]<version>(?P<version>2\.5\.[0-9]{1,})']
-    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.7.3 version.'
+    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.7.4 version.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 1.7:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.7.3'
+    secure_version: '3.7.4'
     regexp: ['[\t]+public[\t|\s]\$RELEASE.*?(?P<version>1.7)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.7.3 version.'
+    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.7.4 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.6:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.7.3'
+    secure_version: '3.7.4'
     regexp: ['.*?RELEASE.*?(?P<version>1.6)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.7.3 version.'
+    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.7.4 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.5:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.7.3'
+    secure_version: '3.7.4'
     regexp: ['.*?RELEASE.*?(?P<version>1.5)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.7.3 version.'
+    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.7.4 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.0:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.7.3'
+    secure_version: '3.7.4'
     regexp: ['[\t]+var.*?RELEASE.*?(?P<version>1.0)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.7.3 version.'
+    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.7.4 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
