--- a/yamls/atutor.yml
+++ b/yamls/atutor.yml
@@ -4,9 +4,9 @@
 # http://seclists.org/bugtraq/2015/Nov/24
 # CVE-2014-9752
 # CVE-2015-1583 http://www.securityfocus.com/archive/1/534778
-# CVE-2015-7711 http://karmainsecurity.com/KIS-2015-07 http://seclists.org/bugtraq/2015/Nov/25
-# CVE-2015-7712
 # CVE-2015-8471 http://seclists.org/bugtraq/2015/Dec/10 https://bitguard.wordpress.com/2015/12/05/atutor-2-2-sqli-vulnerability/
+# CVE-2015-7711 2.2.1 http://karmainsecurity.com/KIS-2015-07 http://seclists.org/bugtraq/2015/Nov/25 https://github.com/atutor/ATutor/issues/134
+# CVE-2015-7712 2.2.1 http://karmainsecurity.com/KIS-2015-08
 # TODO 2.2.1 http://seclists.org/fulldisclosure/2016/Feb/17
 # CVE-2016-2539
 # CVE-2016-2555
